drop workflow related mini sections and promote others
partially for clarity (bug with feedback)

--- a/modules/administration/pages/removing-channels.adoc
+++ b/modules/administration/pages/removing-channels.adoc
@@ -2,19 +2,13 @@
 = Removing Channel
 
 
-== Use Case
-
-This workflow shows how to manually remove {suse} provided channels from {productname} and to clean up end-of-life products, to reclaim space or for other purposes.
+This chapter describes how to manually remove {suse} provided channels from {productname} and to clean up end-of-life products, to reclaim space or for other purposes.
 
 
-
-== Step-by-step Instructions
-
-Manual channel removal consists of <<preparing-to-remove-channel>> and <<removing-channel>>.
 
 
 [[preparing-to-remove-channel]]
-=== Prepare to Remove a Channel
+== Prepare to Remove a Channel
 
 Before removing a channel, you must identify the label for the channel to be removed.
 It can be done with {webui} or on the command line.
@@ -26,7 +20,7 @@ It can be done with {webui} or on the command line.
 ====
 
 
-==== Identify Channel Labels
+=== Identify Channel Labels
 
 .Procedure: Identifying Channel Labels Using {webui}
 [role=procedure]
@@ -46,7 +40,7 @@ mgrctl exec -ti -- spacewalk-remove-channel -l
 ----
 
 
-====  Verify Channel System Subscriptions
+===  Verify Channel System Subscriptions
 
 .Procedure: Verifying Channel System Subscriptions Using {webui}
 
@@ -65,7 +59,7 @@ mgrctl exec -ti -- 'spacecmd -- softwarechannel_listsystems <Channel Label>'
 
 
 [[removing-channel]]
-=== Remove Channel
+== Remove Channel
 
 A channel, with its metadata, can be removed with command line tools only.
 
@@ -73,9 +67,9 @@ For actually removing packages from the filesystem, see <<cleaning-up-channel-pa
 
 
 
-==== Remove an Individual Channel
+=== Remove a Child Channel
 
-.Procedure: Removing an Individual Channel Using the Command Line
+.Procedure: Removing a Child Channel Using the Command Line
 
 . To remove an individual channel run the following command on the {productname} container host:
 +
@@ -91,7 +85,7 @@ mgrctl exec -ti -- spacewalk-remove-channel -c channel-label1 -c channel-label2
 ----
 
 
-==== Remove a Parent and All the Child Channels
+=== Remove a Parent and All the Child Channels
 
 .Procedure: Removing a Parent and All the Child Channels
 . To remove a parent channel with all of the child channels run a command such as:
@@ -116,7 +110,14 @@ mgrctl exec -ti -- spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 //----
 
 
-==== Remove Packages from the Database Using {webui}
+
+== Remove Packages from the Database and the Filesystem
+
+To finally gain space remove the packages from the database and filesystem.
+
+
+
+=== Remove Packages from the Database Using {webui}
 
 .Procedure: Removing Packages from the Database Using {webui}
 . After removing the channel, you need to delete the packages from the database using the {webui}.
@@ -125,7 +126,7 @@ mgrctl exec -ti -- spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 
 
 
-====  Remove the Packages from the Filesystem
+===  Remove the Packages from the Filesystem
 
 .Procedure: Removing the Packages from the Filesystem
 . The following command checks for anything that still exists in the filesystem, but not in the {productname} database, and removes it.
