--- a/modules/administration/pages/removing-channels.adoc
+++ b/modules/administration/pages/removing-channels.adoc
@@ -2,7 +2,7 @@
 = Removing Channel
 
 
-This chapter describes how to manually remove {suse} provided channels from {productname} and to clean up end-of-life products, to reclaim space or for other purposes.
+This chapter describes how to manually remove {suse} provided channels from {productname} and clean up end-of-life products, to reclaim space or for other purposes.
 
 
 
