make use of PR review outcome

--- a/modules/administration/pages/removing-channels.adoc
+++ b/modules/administration/pages/removing-channels.adoc
@@ -24,7 +24,7 @@ It can be done with {webui} or on the command line.
 
 .Procedure: Identifying Channel Labels Using {webui}
 [role=procedure]
-. In the {productname} {webui}, in the sidebar navigate to menu:Software[Channel List > All].
+. In the {productname} {webui}, navigate to menu:Software[Channel List > All].
 . This page displays the [label]``Channel Name``.
   If you select the link for a channel name, you will see the field for [literal]``Channel Label``.
 . Identify the channel, and child channels, to be removed.
@@ -44,7 +44,7 @@ mgrctl exec -ti -- spacewalk-remove-channel -l
 
 .Procedure: Verifying Channel System Subscriptions Using {webui}
 
-. In the {productname} {webui}, in the sidebar navigate to menu:Software[Channel List > All].
+. In the {productname} {webui}, navigate to menu:Software[Channel List > All].
 . Locate [literal]``Systems`` column on the right.
 . Check the [literal]``Systems`` column for the channel, or any child channels, that you want to remove.
 
@@ -62,8 +62,8 @@ mgrctl exec -ti -- 'spacecmd -- softwarechannel_listsystems <Channel Label>'
 == Remove Channel
 
 A channel, with its metadata, can be removed with command line tools only.
-
-For actually removing packages from the filesystem, see <<cleaning-up-channel-packages>>.
+The [command]``spacewalk-remove-channel`` command automatically removes the software packages, too.
+It also removes the metadata from the database and the files from the storage medium.
 
 
 
@@ -85,41 +85,12 @@ mgrctl exec -ti -- spacewalk-remove-channel -c channel-label1 -c channel-label2
 ----
 
 
-=== Remove a Parent and All the Child Channels
+=== Remove a Parent and All Its Child Channels
 
-.Procedure: Removing a Parent and All the Child Channels
+.Procedure: Removing a Parent and All Its Child Channels
 . To remove a parent channel with all of the child channels run a command such as:
 +
 ----
 mgrctl exec -ti -- spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 ----
 
-
-// Initially part of the file handed over by the SME, but this step is not directly related to the removal of channels.
-//[[cleaning-up-channel-packages]]
-//=== Cleaning up channel packages
-
-//==== Running the synchronization
-
-//.Procedure: Running the synchronization
-//. After removing a channel, run the command ``spacewalk-repo-sync`` on all remaining channels, or wait for the operation to complete automatically.
-//. Alternatively, for all currently added channels running the following command:
-//+
-//----
-//mgr-sync refresh --refresh-channels
-//----
-
-
-
-== Remove Packages from the Database and the Filesystem
-
-To finally gain space remove the packages from the database and filesystem.
-
-
-
-=== Remove Packages from the Database Using {webui}
-
-.Procedure: Removing Packages from the Database Using {webui}
-. After removing the channel, you need to delete the packages from the database using the {webui}.
-. In the {productname} {webui}, navigate to menu:SUSEManager[Software > Manage > Packages].
-. Select [literal]``Package in no channel``, and delete the packages.
