--- a/modules/administration/pages/removing-channels.adoc
+++ b/modules/administration/pages/removing-channels.adoc
@@ -62,8 +62,8 @@ mgrctl exec -ti -- 'spacecmd -- softwarechannel_listsystems <Channel Label>'
 == Remove Channel
 
 A channel, with its metadata, can be removed with command line tools only.
-The [command]``spacewalk-remove-channel`` command automatically removes the software packages, too.
-It also removes the metadata from the database and the files from the storage medium.
+The [command]``spacewalk-remove-channel`` command automatically removes the software packages, if they are not referenced anymore by other channels.
+Thus it removes the metadata from the database and the files from the storage medium.
 
 
 
