for consistency use a replaceable instead of a real label

--- a/modules/administration/pages/removing-channels.adoc
+++ b/modules/administration/pages/removing-channels.adoc
@@ -88,9 +88,9 @@ mgrctl exec -ti -- spacewalk-remove-channel -c channel-label1 -c channel-label2
 === Remove a Parent and All Its Child Channels
 
 .Procedure: Removing a Parent and All Its Child Channels
-. To remove a parent channel with all of the child channels run a command such as:
+. To remove a parent channel with all of the child channels run [command]``spacewalk-remove-channel`` with the [option]``-a`` option and replace [literal]``parent-channel-label`` with a channel label such as [literal]``sles12-sp5-pool-x86_64``:
 +
 ----
-mgrctl exec -ti -- spacewalk-remove-channel -a sles12-sp5-pool-x86_64
+mgrctl exec -ti -- spacewalk-remove-channel -a parent-channel-label
 ----
 
