replace with salt snippets

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -226,14 +226,14 @@ Use a snippet by inserting the [option]``$SNIPPET()`` macro in your autoinstalla
 For example, in {kickstart}:
 
 ----
-$SNIPPET('spacewalk/rhel_register_script')
+$SNIPPET('spacewalk/redhat_register_using_salt')
 ----
 
 Or, in {ay}:
 
 ----
 <init-scripts config:type="list">
-  $SNIPPET('spacewalk/sles_register_script')
+  $SNIPPET('spacewalk/minion_script')
 </init-scripts>
 ----
 
