--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -22,7 +22,7 @@ ifeval::[{uyuni-content} == true]
 
 endif::[]
 
-* Run the actual registration.
+* Register the client with {productname} Server by using the {webui} or the command line interface.
 
 * Additional sections to check and verify the registration procedure.
 
