--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -24,7 +24,7 @@ endif::[]
 
 * Register the client with {productname} Server by using the {webui} or the command line interface.
 
-* Additional sections to check and verify the registration procedure.
+Additional sections describe ways to check and verify the registration procedure.
 
 
 == Add Software Channels
