--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -14,15 +14,15 @@ https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html
 //        up to the suse registration page
 The client registration described in this chapter, consists of these steps:
 
-* Synchronize software channels for the new client's operating system and architecture by using either {webui} or command line interface.
+* Synchronize software channels for the new client's operating system and architecture by using either {webui} or command-line interface.
 
 ifeval::[{uyuni-content} == true]
 
-* Synchronize the client tool repository for the newly added operating systems by using command line interface.
+* Synchronize the client tool repository for the newly added operating systems by using command-line interface.
 
 endif::[]
 
-* Register the client with {productname} Server by using the {webui} or the command line interface.
+* Register the client with {productname} Server by using the {webui} or the command-line interface.
 
 Additional sections describe ways to check and verify the registration procedure.
 
