--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -107,7 +107,6 @@ ifeval::[{uyuni-content} == true]
 == Client Tools
 
 Without client tools onboarding clients will fail.
-Client tools you can only add from the command line.
 
 To add the client tools, add these channels from the command prompt:
 
@@ -119,8 +118,12 @@ To add the client tools, add these channels from the command prompt:
 
 | OS Version
 | Client Channel
+
 | {sl-micro} 6.1
 | sl-microos-6.1-uyuni-client
+
+| {sl-micro} 6.0
+| sl-microos-6.0-uyuni-client
 
 |===
 
