--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -8,17 +8,11 @@ It is split into the following sections:
 Requirements::
 Describes hardware, software, and networking requirements before you begin.
 
-
-Deployment::
+Deployment and Installation::
 Describes tasks for deploying {productname} as a container and initial setup.
-
 
 Upgrade and Migration::
 Describes upgrade and migration of {productname} 
 
-
-Public Cloud::
-You can also deploy {productname} to a public cloud instance.
-
-For more information on using {productname} on a public cloud, see xref:specialized-guides:public-cloud-guide/overview.adoc[].
-
+Basic Server Management::
+Describes basic operations to start using the {productname}.
