--- a/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_novendor_cli.adoc
@@ -1,16 +1,22 @@
 .Procedure: Adding Software Channels at the Command Prompt
-. At the command prompt on the {productname} Server, as root, use the [command]``spacewalk-common-channels`` command to add the appropriate channels:
+. At the command prompt on the {productname} container host, as root, add the appropriate channels:
 +
 ----
-spacewalk-common-channels \
+mgrctl exec -ti -- spacewalk-common-channels \
 <base_channel_label> \
 <child_channel_label_1> \
 <child_channel_label_2> \
 ... <child_channel_label_n>
 ----
++
+To list all available repositories, execute the command:
++
+----
+mgrctl exec -ti -- spacewalk-common-channels -l
+----
 . If xref:administration:custom-channels.adoc#_custom_channel_synchronization[automatic synchronization] is turned off, synchronize the channels:
 +
 ----
-spacewalk-repo-sync -p <base_channel_label>
+mgrctl exec -ti -- spacewalk-repo-sync -p <base_channel_label>
 ----
 . Ensure the synchronization is complete before continuing.
