--- a/modules/client-configuration/pages/snippets/addchannels_vendor_cli.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_vendor_cli.adoc
@@ -1,15 +1,15 @@
 .Procedure: Adding Software Channels at the Command Prompt
-. At the command prompt on the {productname} Server, as root, use the [command]``mgr-sync`` command to add the appropriate channels:
+. At the command prompt on the {productname} container host, as root, add the appropriate channels:
 +
 ----
-mgr-sync add channel <channel_label_1>
-mgr-sync add channel <channel_label_2>
-mgr-sync add channel <channel_label_n>
+mgrctl exec -ti -- mgr-sync add channel <channel_label_1>
+mgrctl exec -ti -- mgr-sync add channel <channel_label_2>
+mgrctl exec -ti -- mgr-sync add channel <channel_label_n>
 ----
 . Synchronization starts automatically.
   If you want to synchronize the channels manually, use:
 +
 ----
-mgr-sync sync --with-children <channel_name>
+mgrctl exec -ti -- mgr-sync sync --with-children <channel_name>
 ----
 . Ensure the synchronization is complete before continuing.
