--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,27 +3,39 @@
 
 This section contains information about registering clients running {sle-micro} operating systems 5.1, 5.2, 5.3, 5.4, and 5.5 on {x86_64}, {arm64}, and {zsystems} (s390x) architectures.
 
-The {sle-micro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
-It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
-
 The {sle-micro} uses transactional updates.
-
 Transactional updates are atomic (all updates are applied only if all updates succeed) and support rollbacks.
 They do not affect a running system as no changes are activated until after the system is rebooted.
-This information is displayed in the menu:Systems[Details > Overview] subtab.
 
 For more information on transactional updates and rebooting, see
 https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html.
 
+// FIXME: We either must add this to the other client files (snippet), or
+//        up to the suse registration page
+The client registration described in this chapter, consists of these steps:
+
+* Synchronize software channels for the new client's operating system and architecture by using either {webui} or command-line interface.
+
+ifeval::[{uyuni-content} == true]
+
+* Synchronize the client tool repository for the newly added operating systems by using command-line interface.
+
+endif::[]
+
+* Register the client with {productname} Server by using the {webui} or the command-line interface.
+
+Additional sections describe ways to check and verify the registration procedure.
 
 
 == Add Software Channels
 
-Before you register {sle-micro} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
+Before you register {sle-micro} clients to the {productname} Server, you need to add the required software channels, and synchronize them.
+
+You can add the software channels with the {webui} or from the command line.
 
 include::snippets/arch-other-note.adoc[]
 
-The products you need for this procedure are:
+For the {webui} procedure, you need the following products:
 
 //start with the NEWEST version on top
 [[slemicro-channels-wizard]]
@@ -85,8 +97,8 @@ include::snippets/addchannels_vendor_webui.adoc[]
 
 
 
-Alternatively, you can add channels at the command prompt.
-The channels you need for this procedure are:
+Alternatively, you can add channels from the command prompt.
+For this procedure, you need the following products:
 
 //start with the NEWEST version on top
 [[slemicro-channels-cli]]
@@ -163,6 +175,11 @@ The channels you need for this procedure are:
 include::snippets/addchannels_vendor_cli.adoc[]
 
 ifeval::[{uyuni-content} == true]
+
+== Client Tools
+
+Without client tools onboarding clients will fail.
+Client tools you can only add from the command line.
 
 To add the client tools, add these channels from the command prompt:
 
@@ -242,7 +259,7 @@ Either edit the bootstrap script directly and add the settings, or create the bo
 // 2023-12-12, ke: remains in /srv, see
 // https://github.com/uyuni-project/uyuni-docs/pull/2682/files#r1423757456
 ----
-mgr-bootstrap --script=bootstrap-sle-micro.sh \
+mgrctl exec -ti -- mgr-bootstrap --script=bootstrap-sle-micro.sh \
     --ssl-cert=/srv/www/htdocs/pub/RHN-ORG-TRUSTED-SSL-CERT
 ----
 
