--- a/modules/administration/pages/removing-channels.adoc
+++ b/modules/administration/pages/removing-channels.adoc
@@ -2,19 +2,13 @@
 = Removing Channel
 
 
-== Use Case
-
-This workflow shows how to manually remove {suse} provided channels from {productname} and to clean up end-of-life products, to reclaim space or for other purposes.
+This chapter describes how to manually remove {suse} provided channels from {productname} and clean up end-of-life products, to reclaim space or for other purposes.
 
 
-
-== Step-by-step Instructions
-
-Manual channel removal consists of <<preparing-to-remove-channel>> and <<removing-channel>>.
 
 
 [[preparing-to-remove-channel]]
-=== Preparing to Remove a Channel
+== Prepare to Remove a Channel
 
 Before removing a channel, you must identify the label for the channel to be removed.
 It can be done with {webui} or on the command line.
@@ -26,11 +20,11 @@ It can be done with {webui} or on the command line.
 ====
 
 
-==== Identifying Channel labels
+=== Identify Channel Labels
 
 .Procedure: Identifying Channel Labels Using {webui}
 [role=procedure]
-. In the {productname} {webui}, in the sidebar navigate to menu:Software[Channel List > All].
+. In the {productname} {webui}, navigate to menu:Software[Channel List > All].
 . This page displays the [label]``Channel Name``.
   If you select the link for a channel name, you will see the field for [literal]``Channel Label``.
 . Identify the channel, and child channels, to be removed.
@@ -39,103 +33,64 @@ It can be done with {webui} or on the command line.
 .Procedure: Identifying Channel Labels Using the Command Line
 [role=procedure]
 
-. You can get a list of channels by running the following command:
+. You can get a list of channels by running the following command on the {productname} container host:
 +
 ----
-spacewalk-remove-channel -l
+mgrctl exec -ti -- spacewalk-remove-channel -l
 ----
 
 
-====  Verify Channel System Subscriptions
+===  Verify Channel System Subscriptions
 
 .Procedure: Verifying Channel System Subscriptions Using {webui}
 
-. In the {productname} {webui}, in the sidebar navigate to menu:Software[Channel List > All].
+. In the {productname} {webui}, navigate to menu:Software[Channel List > All].
 . Locate [literal]``Systems`` column on the right.
 . Check the [literal]``Systems`` column for the channel, or any child channels, that you want to remove.
 
 
-.Procedure: Verify Channel System Subscriptions Using the Command Line
+.Procedure: Verifying Channel System Subscriptions Using the Command Line
 
-. Run the following command:
+. Run the following command on the {productname} container host:
 +
 ----
-spacecmd -- softwarechannel_listsystems <Channel Label>
----- 
+mgrctl exec -ti -- 'spacecmd -- softwarechannel_listsystems <Channel Label>'
+----
 
 
 [[removing-channel]]
-=== Removing Channel
+== Remove Channel
 
-A channel, with its metadata, can be removed in the SUMA command line by using the [literal]``spacewalk-remove-channel`` command. 
-This command does not remove the packages themselves from the filesystem. 
-
-Removing packages from the filesystem is described in <<cleaning-up-channel-packages>>.
-
+A channel, with its metadata, can be removed with command line tools only.
+The [command]``spacewalk-remove-channel`` command automatically removes the software packages, if they are not referenced anymore by other channels.
+Thus it removes the metadata from the database and the files from the storage medium.
 
 
-==== Removing an Individual Channel
 
-.Procedure: Removing an Individual Channel Using the Command Line
+=== Remove a Child Channel
 
-. To remove an individual channel run the following command:
+.Procedure: Removing a Child Channel Using the Command Line
+
+. To remove an individual channel run the following command on the {productname} container host:
 +
 ----
-spacewalk-remove-channel -c channel-label
+mgrctl exec -ti -- spacewalk-remove-channel -c channel-label
 ----
 +
-. To remove multiple channels at the same time, use [literal]``-c`` flag for each channel, followed by the [literal]``channel-label``. 
+. To remove multiple channels at the same time, use [literal]``-c`` flag for each channel, followed by the [literal]``channel-label``.
   For example:
 +
 ----
-spacewalk-remove-channel -c channel-label1 -c channel-label2
+mgrctl exec -ti -- spacewalk-remove-channel -c channel-label1 -c channel-label2
 ----
 
 
-==== Removing a Parent and All Its Child Channels
+=== Remove a Parent and All Its Child Channels
 
 .Procedure: Removing a Parent and All Its Child Channels
-. It is also possible to remove a parent channel with all of its child channels, like this:
+. To remove a parent channel with all of the child channels run [command]``spacewalk-remove-channel`` with the [option]``-a`` option and replace [literal]``parent-channel-label`` with a channel label such as [literal]``sles12-sp5-pool-x86_64``:
 +
 ----
-spacewalk-remove-channel -a sles12-sp5-pool-x86_64
+mgrctl exec -ti -- spacewalk-remove-channel -a parent-channel-label
 ----
 
-
-// Initially part of the file handed over by the SME, but this step is not directly related to the removal of channels.
-//[[cleaning-up-channel-packages]]
-//=== Cleaning up channel packages
-
-//==== Running the synchronization
-
-//.Procedure: Running the synchronization
-//. After removing a channel, run the command ``spacewalk-repo-sync`` on all remaining channels, or wait for the operation to complete automatically.
-//. Alternatively, for all currently added channels running the following command:
-//+
-//----
-//mgr-sync refresh --refresh-channels
-//----
-
-
-==== Remove Packages from the Database via the {webui}
-
-.Procedure: Remove Packages from the Database via the {webui}
-. After removing the channel, you need to delete the packages from the database via the {webui}.
-. In the {productname} {webui} navigate to menu:SUSEManager[Software > Manage > Packages].
-. Select [literal]``Package in no channel``, and delete the packages.
-
-
-
-==== Clean the Packages from the Filesystem
-
-.Procedure: Clean the Packages from the Filesystem
-. The following command checks for anything that is still showing in the filesystem, but not in the SUMA database and then removes it.
-+
-----
-# spacewalk-data-fsck -r -S -C -O
-----
-+
-[WARNING]
-====
-The final cleanup command can take several minutes, or even hours to complete.
-====
