sl micro version with proxy 5.1

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers]]
-= {productname} Proxy Deployment on {sle-micro}
+= {productname} Proxy Deployment on {sl-micro}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -9,7 +9,7 @@ This guide outlines the deployment process for the {productname} {productnumber}
 
 [IMPORTANT]
 ====
-{sle-micro} is only supported as regular minion ([systemitem]``default`` contact method) for the time being.
+{sl-micro} is only supported as regular minion ([systemitem]``default`` contact method) for the time being.
 We are working on managing it as Salt SSH client ([systemitem]``salt-ssh`` contact method), too.
 ====
 
@@ -20,9 +20,9 @@ To successfully deploy, you will perform the following actions:
 // Add certificate tasks item
 .Procedure: Deploying Proxy
 . Review hardware requirements.
-. Synchronize the {sle-micro} {microversion} parent channel and the proxy extension child channel on the server.
-. Install {sle-micro} {microversion} on a bare-metal machine.
-. During the installation, register {sle-micro} {microversion} along with the {productname} Proxy extension.
+. Synchronize the {sl-micro} {microversion} parent channel and the proxy extension child channel on the server.
+. Install {sl-micro} {microversion} on a bare-metal machine.
+. During the installation, register {sl-micro} {microversion} along with the {productname} Proxy extension.
 . Create a {salt} activation key.
 . Bootstrap the proxy as a client with the [systemitem]``default`` connection method.
 . Generate a proxy configuration.
@@ -33,7 +33,7 @@ To successfully deploy, you will perform the following actions:
 .Supported operating system for the Proxy Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sle-micro} {microversion}.
+The supported operating system for the container host is {sl-micro} {microversion}.
 
 Container host::
 A container host is a server equipped with a container engine like Podman, which lets it manage and deploy containers.
@@ -97,30 +97,30 @@ image::setup-wizard.png[scaledwidth=80%]
 
 .Procedure: Synchronizing the Parent Channel and Proxy Extension
 . In the {productname} {webui} select menu:Admin[Products].
-. From the products page enter {sle-micro} in the filter field.
+. From the products page enter {sl-micro} in the filter field.
 . Next use the drop-down to select the required architecture.
   For this example {x86_64}.
-. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``{productname} Proxy Extension 5.0 x86_64`` extension.
+. In the [systemitem]``Product Description`` field select the {sl-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``{productname} Proxy Extension 5.1 x86_64`` extension.
 . Click the btn:[Add products] button.
 . Wait for the synchronization to complete.
 
 
 
-== {sle-micro} {microversion} Installation
+== {sl-micro} {microversion} Installation
 
 .Procedure: Downloading the Installation Media
-. Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
+. Locate the {sl-micro} {microversion} installation media at https://www.suse.com/download/sl-micro/.
 . You will need an account with {scclongform} and must be logged in to download the ISO.
-. Download [filename]``SLE-Micro-5.5-DVD-x86_64-GM-Media1.iso``.
+. Download [filename]``SL-Micro-6.1-DVD-x86_64-GM-Media1.iso``.
 . Prepare a USB flash disk or DVD for installation.
-. Insert a DVD or a bootable USB stick containing the installation image for {sle-micro} {microversion}.
+. Insert a DVD or a bootable USB stick containing the installation image for {sl-micro} {microversion}.
 . Boot or reboot your system.
 
 
-For detailed documentation on preparing your machines OS (virtual or physical), see link:https://documentation.suse.com/sle-micro/5.5/html/SLE-Micro-all/book-deployment-slemicro.html[{sle-micro} {microversion} Deployment Guide].
+For detailed documentation on preparing your machines OS (virtual or physical), see link:https://documentation.suse.com/sl-micro/6.1/html/SL-Micro-all/book-deployment-slmicro.html[{sl-micro} {microversion} Deployment Guide].
 
 
-.Procedure: Installing {sle-micro} {microversion}
+.Procedure: Installing {sl-micro} {microversion}
 . Use the arrow keys to select [systemitem]``Installation``.
 . Adjust Keyboard and language.
   Click the [systemitem]``checkbox`` to accept the license agreement.
@@ -132,13 +132,13 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 .{productname} {productnumber} Proxy as an extension
 [NOTE]
 ====
-The {productname} {productnumber} Proxy is registered as an extension. Therefore, in addition to acquiring an {scclongform} registration key for {sle-micro} {microversion}, you will also need an {scclongform} registration code for the following extension:
+The {productname} {productnumber} Proxy is registered as an extension. Therefore, in addition to acquiring an {scclongform} registration key for {sl-micro} {microversion}, you will also need an {scclongform} registration code for the following extension:
 
 * {productname} {productnumber} Proxy
 ====
 
 . Enter your {scclongform} Email address.
-. Enter your registration code for {sle-micro} {microversion}.
+. Enter your registration code for {sl-micro} {microversion}.
 . Click [systemitem]``Next`` to continue.
 . On the [systemitem]``Extension and Module Selection`` page uncheck the **Hide Development Versions** checkbox.
 . Select the {productname} {productnumber} Proxy extension [systemitem]``Checkbox``.
@@ -150,7 +150,7 @@ The {productname} {productnumber} Proxy is registered as an extension. Therefore
   Click btn:[Next].
 . On the [systemitem]``Installation Settings`` page click btn:[Install].
 
-This finalizes installation of {sle-micro} {microversion} and {productname} {productnumber} Proxy as an extension.
+This finalizes installation of {sl-micro} {microversion} and {productname} {productnumber} Proxy as an extension.
 
 
 
