sl micro version with proxy 5.1 (vm*)

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -25,12 +25,12 @@ Images for {productname} {productnumber} Proxy are available at link:https://www
 ====
 For more information on preparing raw images, see:
 
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-images-procedure[]
+* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#sec-raw-preparation[]
+* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#cha-images-procedure[]
 
 For additional information on the self install images, see:
 
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-selfinstal-procedure[]
+* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#cha-selfinstal-procedure[]
 ====
 
 // FIXME more archs supported?
@@ -65,7 +65,7 @@ If you want to use a production environment and need background information abou
 2+<| KVM Settings
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
-| Version:            | {productname}-Proxy.x86_64-5.0.0-Build16.12.qcow2
+| Version:            | {productname}-Proxy.x86_64-5.1.*.qcow2
 | Memory:             | 2 GB (minimum)
 | CPU's:              | 2
 | Storage Format:     | _.qcow2_ 40 GB (Default) Root Partition
