--- a/README.adoc
+++ b/README.adoc
@@ -19,9 +19,9 @@ ifdef::env-github,backend-html5[]
 :rhel: Red Hat Enterprise Linux
 :rhnminrelease6: Red Hat Enterprise Linux Server 6
 :rhnminrelease7: Red Hat Enterprise Linux Server 7
-// SUSE Manager Entities
-:susemgr: SUSE Manager
-:susemgrproxy: SUSE Manager Proxy
+// SUSE Multi-Linux Manager Entities
+:susemgr: SUSE Multi-Linux Manager
+:susemgrproxy: SUSE Multi-Linux Manager Proxy
 :productnumber: 3.2
 :saltversion: 2018.3.0
 :webui: WebUI
