--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,7 +1,7 @@
 = {productname} Documentation
 
 ifeval::[{suma-content} == true]
-[.currentrel]**Version: {productnumber}**
+[.currentrel]**Version: {productnumber} Alpha 2**
 endif::[]
 
 ifeval::[{uyuni-content} == true]
