add proxy persistent storage

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -72,7 +72,7 @@ ifeval::[{suma-content} == true]
 **** xref:client-intro.adoc[Upgrading Clients]
 endif::[]
 
-** Basic Server Management
+** Basic Server and Proxy Management
 *** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML Configuration With mgradm]
 *** xref:container-management/start-and-stop-containers.adoc[Starting and Stopping Containers]
 *** xref:container-management/persistent-container-volumes.adoc[Persistent Container Volumes]
