make it match hardware-requirements.adoc

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -72,17 +72,17 @@ This table shows the hardware requirements for deploying {productname} Proxy.
 | Minimum 40 GB
 
 |
-| [path]``/var/lib/containers/storage/volumes/srv-www``
-| Minimum 100 GB, storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-
-|
-| [path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
-| Minimum 100 GB
+| [path]``/var/lib/containers/storage/volumes``
+| Minimum 150 GB
 
 |===
 
-// FIXME: ^^^ should we better just mention
-//            /var/lib/containers/storage/volumes here above? ^^^
+// /srv-www
+// * Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+
+// |
+// | [path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
+// | Minimum 100 GB
 
 
 
