--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -145,6 +145,10 @@ When applied, this template creates three filters required to achieve this behav
 * Deny patches that contain ``reboot_suggested`` keyword
 * Deny patches that contain a package which provides the name ``installhint(reboot-needed)``
 
+[NOTE]
+====
+Because the [package]``kernel-default-base`` package can also provide the kernel, create a similarfilter for [package]``kernel-default-base``, too.
+====
 
 For more information on how to set up a live patching project, see xref:administration:content-lifecycle-examples.adoc#exclude-higher-kernel-version[].
 
@@ -191,6 +195,10 @@ For more information on how to set up a live patching project, see xref:administ
 . Click btn:[Attach/Detach Filters].
 . Select the three filters that have the specified prefix, and click btn:[Save].
 
+[NOTE]
+====
+Because the [package]``kernel-default-base`` package can also provide the kernel, create a similarfilter for [package]``kernel-default-base``, too.
+====
 
 
 === AppStream Modules with Defaults
@@ -240,11 +248,11 @@ Building applies filters to the attached sources and clones them to the first en
 
 
 You can use the same vendor channels as sources for multiple content projects.
-In this case, {productname} does not create new patch clones for each cloned channel. 
+In this case, {productname} does not create new patch clones for each cloned channel.
 Instead, a single patch clone is shared between all of your cloned channels.
 This can cause problems if a vendor modifies a patch; for example, if the patch is retracted, or the packages within the patch are changed.
 When you build one of the content projects, all the channels that share the cloned patch are synchronized with the original by default, even if the channels are in other environments of your content project, or other content project channels in your organization.
-You can change this behavior by turning off automatic patch synchronization in your organization settings. 
+You can change this behavior by turning off automatic patch synchronization in your organization settings.
 To manually synchronize the patch later for all channels sharing the patch, navigate to menu:Software[Manage > Channels], click the channel you want to synchronize and navigate to the [guimenu]``Sync`` subtab.
 Even manual patch synchronization affects all organization channels sharing the patch.
 
