Azure instructions corrected.

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -6,12 +6,12 @@
 
 . Switch to the root user and update the system.
 +
-
 ----
 sudo -i
-zypper refresh
-zypper update
+transactional-update
 ----
++ 
+. Reboot the system.
 
 
 
@@ -54,6 +54,8 @@ Make sure to utilize the appropriate Azure accounts which correspond to the spec
 
 
 == Configure Storage
+
+.Procedure: Configuring Storage
 . SSH into your {azure} instance.
 
 . Switch to the root user and update the system.
@@ -69,16 +71,15 @@ transactional-update
 . Configure storage with the [command]``mgr-storage-server`` tool or in the case of the proxy use [command]``mgr-storage-proxy``. 
 For more information, see [command]``mgr-storage-server --help`` or [command]``mgr-storage-proxy --help``.
 This tool simplifies creating the container storage and database volumes.
-
-
 . Format the command in the following manner: 
 +
-
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
-
-#For example: 
-
+----
++
+. For example: 
++
+----
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
 +
