--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -11,7 +11,8 @@
 sudo -i
 transactional-update
 ----
-
++
+. Reboot the system.
 
 
 == Network Configuration
@@ -69,8 +70,6 @@ transactional-update
 . Configure storage with the [command]``mgr-storage-server`` tool or in the case of the proxy use [command]``mgr-storage-proxy``. 
 For more information, see [command]``mgr-storage-server --help`` or [command]``mgr-storage-proxy --help``.
 This tool simplifies creating the container storage and database volumes.
-
-.Procedure
 . Format the command in the following manner: 
 +
 
