--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -9,10 +9,10 @@
 
 ----
 sudo -i
-zypper refresh
-zypper update
+transactional-update
 ----
-
++
+. Reboot the system.
 
 
 == Network Configuration
@@ -54,8 +54,9 @@ Make sure to utilize the appropriate Azure accounts which correspond to the spec
 
 
 == Configure Storage
-. SSH into your {azure} instance.
 
+.Procedure: Configuring Storage
+. SSH into your {azure} instance.
 . Switch to the root user and update the system.
 +
 
@@ -69,16 +70,16 @@ transactional-update
 . Configure storage with the [command]``mgr-storage-server`` tool or in the case of the proxy use [command]``mgr-storage-proxy``. 
 For more information, see [command]``mgr-storage-server --help`` or [command]``mgr-storage-proxy --help``.
 This tool simplifies creating the container storage and database volumes.
-
-
 . Format the command in the following manner: 
 +
 
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
-
-#For example: 
-
+----
++
+For example: 
++
+----
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
 +
@@ -91,18 +92,3 @@ For more information, see xref:installation-and-upgrade:container-management/per
 ====
 
 . As root run `mgradm install podman <FQDN>` to deploy.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
