--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -12,7 +12,7 @@ Deployment and Installation::
 Describes tasks for deploying {productname} as a container and initial setup.
 
 Upgrade and Migration::
-Describes upgrade and migration of {productname} 
+Describes upgrade and migration of {productname}.
 
 Basic Server Management::
 Describes basic operations to start using the {productname}.
