--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -160,7 +160,7 @@ When you are preparing to use live patching, there are some important considerat
 In this example you update your systems with the ``SUSE-15-2019-1244`` patch.
 This patch contains ``kernel-default-4.12.14-150.17.1-x86_64``.
 
-You need to exclude all patches which contain a higher version of ``kernel-default``.
+You need to exclude all patches which contain a higher version of [package]``kernel-default`` and [package]``kernel-default-base``.
 
 .Procedure: Excluding Packages with a Higher Kernel Version
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters], and click btn:[Create Filter].
@@ -177,18 +177,21 @@ You need to exclude all patches which contain a higher version of ``kernel-defau
 . Click btn:[Attach/Detach Filters].
 . Select [guimenu]``Exclude kernel greater than 4.12.14-150.17.1``, and click btn:[Save].
 
+You need to repeat this procedure for the [package]``kernel-default-base`` package.
+
 
 When you click btn:[Build], a new environment is created.
 The new environment contains all the kernel patches up to the version you installed.
 
-NOTE: All kernel patches with higher kernel versions are removed.
-Live patching kernels remain available as long as they are not the first in a series.
-
 [NOTE]
 ====
+All kernel patches with higher kernel versions are removed.
+Live patching kernels remain available as long as they are not the first in a series.
+====
+
 This procedure can be automated using a filter template.
 For more information on how to apply a live patching filter template, see xref:administration:content-lifecycle.adoc#filter-templates[].
-====
+
 
 
 [#switch-kernel-version-for-live-patching]
