Apply suggestions from code review
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
@@ -165,9 +165,9 @@ The following  volumes are stored under the **Podman** default storage location 
 |Volume Name | Volume Directory
 
 | **uyuni-proxy-rhn-cache**
-| [path]``/var/???/???``
+| [path]``/var/cache/rhn``
 
 
 | **uyuni-proxy-squid-cache**
-| [path]``/var/???/???``
+| [path]``/var/cache/squid``
 |===
